--- a/src/output.css
+++ b/src/output.css
@@ -584,28 +584,37 @@ video {
   margin-right: auto;
 }
 
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
 .flex {
   display: flex;
 }
 
-.w-9\/12 {
-  width: 75%;
+.h-10 {
+  height: 2.5rem;
 }
 
 .w-full {
   width: 100%;
 }
 
-.w-11\/12 {
-  width: 91.666667%;
+.w-2\/3 {
+  width: 66.666667%;
+}
+
+.w-1\/3 {
+  width: 33.333333%;
+}
+
+.flex-row {
+  flex-direction: row;
 }
 
 .flex-col {
   flex-direction: column;
-}
-
-.content-center {
-  align-content: center;
 }
 
 .items-end {
@@ -614,10 +623,6 @@ video {
 
 .items-center {
   align-items: center;
-}
-
-.justify-end {
-  justify-content: flex-end;
 }
 
 .justify-center {
@@ -632,17 +637,29 @@ video {
   border-radius: 0.25rem;
 }
 
-.bg-primaryBlack {
-  background-color: hsla(330, 28%, 13%, 1);
+.rounded-lg {
+  border-radius: 0.5rem;
 }
 
-.bg-darkGreen {
-  background-color: hsla(162, 87%, 24%, 1);
+.rounded-md {
+  border-radius: 0.375rem;
+}
+
+.bg-lightGrey {
+  background-color: hsla(100, 0%, 98%, 0.75);
 }
 
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-neonGreen {
+  background-color: hsla(144, 82%, 47%, 1);
+}
+
+.bg-successGreen {
+  background-color: hsla(162, 95%, 34%, 1);
 }
 
 .bg-gradient-to-tr {
@@ -669,20 +686,20 @@ video {
   padding-right: 1rem;
 }
 
-.pt-5 {
-  padding-top: 1.25rem;
+.pl-4 {
+  padding-left: 1rem;
 }
 
-.pt-1 {
-  padding-top: 0.25rem;
+.text-left {
+  text-align: left;
 }
 
 .text-center {
   text-align: center;
 }
 
-.text-end {
-  text-align: end;
+.text-right {
+  text-align: right;
 }
 
 .text-\[12px\] {
@@ -703,17 +720,32 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-darkOrange {
-  color: hsla(21.6, 100%, 20%, 1);
-}
-
 .text-primaryOrange {
   color: hsla(21.6, 100%, 50%, 1);
+}
+
+.text-successGreen {
+  color: hsla(162, 95%, 34%, 1);
+}
+
+.text-neonGreen {
+  color: hsla(144, 82%, 47%, 1);
+}
+
+.line-through {
+  -webkit-text-decoration-line: line-through;
+          text-decoration-line: line-through;
 }
 
 .no-underline {
   -webkit-text-decoration-line: none;
           text-decoration-line: none;
+}
+
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .shadow-md {
@@ -722,9 +754,15 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-lg {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+.shadow-sm {
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow {
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -746,9 +784,5 @@ video {
 @media (min-width: 768px) {
   .md\:bg-transparent {
     background-color: transparent;
-  }
-
-  .md\:text-right {
-    text-align: right;
   }
 }
