--- a/src/output.css
+++ b/src/output.css
@@ -579,6 +579,10 @@ video {
   }
 }
 
+.m-1 {
+  margin: 0.25rem;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -597,16 +601,22 @@ video {
   height: 2.5rem;
 }
 
-.w-full {
-  width: 100%;
-}
-
 .w-2\/3 {
   width: 66.666667%;
 }
 
+.w-full {
+  width: 100%;
+}
+
 .w-1\/3 {
   width: 33.333333%;
+}
+
+.select-none {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }
 
 .flex-row {
@@ -637,16 +647,25 @@ video {
   border-radius: 0.25rem;
 }
 
-.rounded-lg {
-  border-radius: 0.5rem;
-}
-
 .rounded-md {
   border-radius: 0.375rem;
 }
 
-.bg-lightGrey {
-  background-color: hsla(100, 0%, 98%, 0.75);
+.border {
+  border-width: 1px;
+}
+
+.border-primaryOrange\/\[\.15\] {
+  border-color: hsl(21.6 100% 50% / .15);
+}
+
+.border-gray-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
+}
+
+.bg-primaryOrange\/\[\.15\] {
+  background-color: hsl(21.6 100% 50% / .15);
 }
 
 .bg-white {
@@ -658,8 +677,8 @@ video {
   background-color: hsla(144, 82%, 47%, 1);
 }
 
-.bg-successGreen {
-  background-color: hsla(162, 95%, 34%, 1);
+.bg-lightGrey {
+  background-color: hsla(100, 0%, 98%, 0.75);
 }
 
 .bg-gradient-to-tr {
@@ -676,14 +695,27 @@ video {
   --tw-gradient-to: hsla(21.6, 100%, 50%, 1);
 }
 
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
 
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
+.pb-4 {
+  padding-bottom: 1rem;
 }
 
 .pl-4 {
@@ -702,6 +734,16 @@ video {
   text-align: right;
 }
 
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .text-\[12px\] {
   font-size: 12px;
 }
@@ -710,9 +752,25 @@ video {
   font-weight: 700;
 }
 
+.font-light {
+  font-weight: 300;
+}
+
+.font-semibold {
+  font-weight: 600;
+}
+
+.leading-3 {
+  line-height: .75rem;
+}
+
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.text-primaryOrange {
+  color: hsla(21.6, 100%, 50%, 1);
 }
 
 .text-white {
@@ -720,16 +778,8 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-primaryOrange {
-  color: hsla(21.6, 100%, 50%, 1);
-}
-
 .text-successGreen {
   color: hsla(162, 95%, 34%, 1);
-}
-
-.text-neonGreen {
-  color: hsla(144, 82%, 47%, 1);
 }
 
 .line-through {
@@ -742,27 +792,15 @@ video {
           text-decoration-line: none;
 }
 
-.shadow-lg {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .shadow-md {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-sm {
-  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
-  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow {
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -772,6 +810,14 @@ video {
 
 /* Any custom css needs to go here. We do not have nesting in tailwind so we need to use the class names to style the elements. */
 
+.hover\:cursor-default:hover {
+  cursor: default;
+}
+
+.hover\:cursor-pointer:hover {
+  cursor: pointer;
+}
+
 .hover\:bg-darkOrange:hover {
   background-color: hsla(21.6, 100%, 20%, 1);
 }
@@ -779,6 +825,16 @@ video {
 .hover\:underline:hover {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
+}
+
+@media (min-width: 480px) {
+  .sm\:hover\:border-primaryOrange\/\[\.15\]:hover {
+    border-color: hsl(21.6 100% 50% / .15);
+  }
+
+  .sm\:hover\:bg-primaryOrange\/\[\.15\]:hover {
+    background-color: hsl(21.6 100% 50% / .15);
+  }
 }
 
 @media (min-width: 768px) {
