--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@500&display=swap');
+*{
+    font-family: 'Nunito', sans-serif;
+}
 
 /* Any custom css needs to go here. We do not have nesting in tailwind so we need to use the class names to style the elements. */
