--- a/src/output.css
+++ b/src/output.css
@@ -962,9 +962,19 @@ video {
   padding-right: 2.5rem;
 }
 
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
 .py-10 {
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
+}
+
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .pt-6 {
@@ -1016,14 +1026,14 @@ video {
   line-height: 1.75rem;
 }
 
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .text-2xl {
@@ -1043,6 +1053,11 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .font-bold {
@@ -1082,6 +1097,10 @@ video {
   color: hsla(21.6, 100%, 50%, 1);
 }
 
+.text-orangeGrey {
+  color: hsla(21, 46%, 36%, 0.86);
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -1089,14 +1108,6 @@ video {
 
 .text-successGreen {
   color: hsla(144, 57%, 33%, 1);
-}
-
-.text-lightGrey {
-  color: hsla(100, 0%, 98%, 0.75);
-}
-
-.text-primaryBlack {
-  color: hsla(330, 28%, 13%, 1);
 }
 
 .line-through {
