--- a/src/output.css
+++ b/src/output.css
@@ -614,6 +614,10 @@ video {
   bottom: 3.5rem;
 }
 
+.top-20 {
+  top: 5rem;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -997,6 +1001,10 @@ video {
 
 .bg-cover {
   background-size: cover;
+}
+
+.bg-center {
+  background-position: center;
 }
 
 .bg-no-repeat {
