--- a/src/output.css
+++ b/src/output.css
@@ -794,6 +794,14 @@ video {
   width: 10rem;
 }
 
+.w-80 {
+  width: 20rem;
+}
+
+.w-11\/12 {
+  width: 91.666667%;
+}
+
 .min-w-full {
   min-width: 100%;
 }
@@ -1354,6 +1362,22 @@ video {
 
   .md\:w-20 {
     width: 5rem;
+  }
+
+  .md\:w-fit {
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+
+  .md\:w-1\/2 {
+    width: 50%;
+  }
+
+  .md\:max-w-fit {
+    max-width: -webkit-fit-content;
+    max-width: -moz-fit-content;
+    max-width: fit-content;
   }
 
   .md\:flex-row {
