--- a/src/output.css
+++ b/src/output.css
@@ -638,6 +638,10 @@ video {
   margin: 0.25rem;
 }
 
+.m-0 {
+  margin: 0px;
+}
+
 .my-2 {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
@@ -757,6 +761,10 @@ video {
 
 .h-16 {
   height: 4rem;
+}
+
+.h-20 {
+  height: 5rem;
 }
 
 .w-full {
@@ -1020,6 +1028,14 @@ video {
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
 }
 
+.bg-darkGrey {
+  background-color: hsla(100, 0%, 20%, 0.75);
+}
+
+.bg-lightPurple {
+  background-color: hsla(315, 97%, 42%, 0.81);
+}
+
 .bg-gradient-to-tr {
   background-image: linear-gradient(to top right, var(--tw-gradient-stops));
 }
@@ -1048,12 +1064,33 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
+.from-darkOrange {
+  --tw-gradient-from: hsla(21.6, 100%, 20%, 1);
+  --tw-gradient-to: hsl(21.6 100% 20% / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-lightGrey {
+  --tw-gradient-from: hsla(100, 0%, 98%, 0.75);
+  --tw-gradient-to: hsl(100 0% 98% / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.via-lightOrange {
+  --tw-gradient-to: hsl(29 96% 64% / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), hsla(29, 96%, 64%, 0.8), var(--tw-gradient-to);
+}
+
 .to-primaryOrange {
   --tw-gradient-to: hsla(21.6, 100%, 50%, 1);
 }
 
 .to-lightOrange {
   --tw-gradient-to: hsla(29, 96%, 64%, 0.8);
+}
+
+.to-lightGrey {
+  --tw-gradient-to: hsla(100, 0%, 98%, 0.75);
 }
 
 .bg-contain {
@@ -1082,6 +1119,10 @@ video {
 
 .p-5 {
   padding: 1.25rem;
+}
+
+.p-0 {
+  padding: 0px;
 }
 
 .py-2 {
@@ -1387,6 +1428,18 @@ video {
 }
 
 @media (min-width: 768px) {
+  .md\:top-20 {
+    top: 5rem;
+  }
+
+  .md\:right-6 {
+    right: 1.5rem;
+  }
+
+  .md\:top-24 {
+    top: 6rem;
+  }
+
   .md\:mt-2 {
     margin-top: 0.5rem;
   }
@@ -1403,6 +1456,10 @@ video {
     display: none;
   }
 
+  .md\:h-20 {
+    height: 5rem;
+  }
+
   .md\:w-full {
     width: 100%;
   }
@@ -1413,6 +1470,14 @@ video {
 
   .md\:flex-row {
     flex-direction: row;
+  }
+
+  .md\:flex-row-reverse {
+    flex-direction: row-reverse;
+  }
+
+  .md\:flex-col {
+    flex-direction: column;
   }
 
   .md\:flex-wrap {
